<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.timphongtro.DangPhongFragment"
    android:background="@drawable/ic_wave_room"
    >

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        android:layout_margin="10dp"
        >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:weightSum="10"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/txtDangPhong"
                android:textSize="30sp"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="3"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loaiphong"
                    android:textSize="25sp"
                    android:textStyle="bold"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rdKTX"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ktx"
                        android:textSize="20sp"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/rdPhongChoThue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phong_cho_thue"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/rdPhongOGhep"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phong_o_ghep"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/rdNhaNguyenCan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nha_nguyen_can"
                        android:textSize="20sp" />
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suc_chua"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
                <EditText
                    android:id="@+id/edtSucChua"
                    android:layout_marginHorizontal="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nhap_so_nguoi"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gioi_tinh"
                    android:textSize="25sp"
                    android:textStyle="bold"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rdTatCa"
                        android:checked="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tat_ca"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/rdNam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nam"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/rdNu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nu"
                        android:textSize="20sp" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/dien_tich"
                    android:textStyle="bold"/>
                <EditText

                    android:id="@+id/edtDienTich"
                    android:layout_marginHorizontal="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nhap_dien_tich"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/chi_phi"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/edtChiPhi"
                    android:layout_marginHorizontal="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nhap_so_tien"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/dia_chi"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/edtDiaChi"
                    android:layout_marginHorizontal="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nhap_dia_chi"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:text="@string/anh"
                    android:textStyle="bold"/>

                    <ImageButton
                        android:layout_marginTop="@dimen/margin_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/choose"
                        android:id="@+id/btnChoose"
                        />

                <ImageView
                    android:id="@+id/imgView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/noimage"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right|center_vertical"
                android:layout_weight="1">
                <Button
                    android:id="@+id/btnDang"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/bg_botton_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/dang"/>
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</FrameLayout>