<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.timphongtro.TaiKhoanFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="715dp"
                android:layout_weight="9"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:id="@+id/btnUpdateProfile"
                android:layout_width="164dp"
                android:layout_height="183dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="9"
                android:background="@drawable/btn_bg"
                android:text="@string/updateprofile" />

            <Button
                android:id="@+id/btnEditProfile"
                android:layout_width="168dp"
                android:layout_height="183dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="9"
                android:background="@drawable/btn_bg"
                android:text="@string/editprofile" />

            <Button
                android:id="@+id/btnlogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:text="@string/logout"
                android:layout_marginBottom="20dp"
                />

        </LinearLayout>

</FrameLayout>