<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.timphongtro.InfoSearch"
    android:layout_margin="20dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <ImageView
            android:id="@+id/imgInfoSearch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:src="@drawable/ic_person"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chi_phi"
                android:textSize="20dp"></TextView>
            <TextView
                android:id="@+id/txtChiPhiInfoSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                ></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dia_chi"
                android:textSize="20dp"></TextView>
            <TextView
                android:id="@+id/txtDiaChiInfoSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dien_tich"
                android:textSize="20dp"></TextView>
            <TextView
                android:id="@+id/txtDienTichInfoSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gioi_tinh"
                android:textSize="20dp"></TextView>
            <TextView
                android:id="@+id/txtGioiTinhInfoSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/loaiphong"
                android:textSize="20dp"></TextView>
            <TextView
                android:id="@+id/txtLoaiPhongInfoSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/suc_chua"
                android:textSize="20dp"></TextView>
            <TextView
                android:id="@+id/txtSucChuaInfoSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="4"></TextView>
        </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>